--- a/Assets/Package/package.json
+++ b/Assets/Package/package.json
@@ -1,18 +1,16 @@
 {
-    "name": "com.gameworkstore.gameliftsdk",
-    "version": "4.0.2008",
-    "displayName": "GameWorkstore GameLift SDK",
-    "description": "Game Lift Managed Server C# SDK for Unity. It supports only Linux64.",
-    "unity": "2020.1",
+    "name": "com.gameworkstore.applovinsdk",
+    "version": "5.8.2",
+    "displayName": "GameWorkstore AppLovin SDK",
+    "description": "AppLovin SDK for Unity.",
+    "unity": "2022.1",
     "icon": ".icon.png",
-    "keywords": [ "gamelift", "sdk", "server" ],
+    "keywords": [ "applovin", "sdk" ],
     "author": {
         "name": "Game Workstore",
         "email": "contact@gameworkstore.com",
         "url": "https://gameworkstore.com"
     },
     "dependencies": {
-        "com.gameworkstore.googleprotobufunity": "3.15.2004",
-        "com.unity.nuget.newtonsoft-json": "2.0.0"
     }
 }
